# ragdoll

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: contributing.md
src/ragdoll/: __init__.py  config.py  main.py  schemas.py
src/ragdoll/chunker/: __init__.py  naive_chunker.py
src/ragdoll/commands/: __init__.py  add.py  delete.py  index.py  list_files.py  preview.py  search.py
src/ragdoll/database/: database.py  db_ops.py
src/ragdoll/embedder/: __init__.py  get_embedder.py
src/ragdoll/embedder/providers/: __init__.py  base.py  mock.py  openai.py
tests/: test_chunker.py  test_e2e.py
tests/data/mock-documents/: 00.md  01.md  02.md  03.md  04.md
