[project]
name = "ragdoll"
version = "0.1.0"
description = "simple CLI retriever for RAG applications"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.22.5",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "uuid6>=2025.0.1",
]

[project.scripts]
ragdoll = "ragdoll:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
